# gnome-todo

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  egg-flow-box.c  egg-flow-box.h  egg-list-box.c  gnome-todo.doap
data/: Makefile.am  gnome-todo.css  gnome-todo.desktop  gnome-todo.desktop.in.in  gnome-todo.gresource.xml  org.gnome.todo.gschema.xml  org.gnome.todo.gschema.xml.in
data/icons/: Makefile.am
data/ui/: app-menu.ui  list_editor_toolbar.glade  list_item.glade  lists_toolbar.glade  main_toolbar.glade  new_list_dialog.glade  new_list_item.glade  note_editor.glade  rename_list_dialog.glade  selection_toolbar.glade  spinner_box.glade  task_editor.glade
egg-list-box/: .gitignore  Makefile.am  configure.ac  egg-flow-box.c  egg-list-box-accessible.c  egg-list-box.c  egg-list-box.h  test-flow-box.c
po/: POTFILES.in  POTFILES.skip
src/: Makefile-js.am  Makefile-lib.am  Makefile.am  application.js  contentView.js  datePicker.js  format.js  gTasksSource.js  global.js  gnome-todo  gnome-todo-debug  gnome-todo-uninstalled.in  gnome-todo.in  listEditor.js  listsController.js  listsIconView.js  listsModel.js  listsToolbar.js  listsView.js  mainController.js  mainToolbar.js  mainView.js  mainWindow.js  notifications.js  selection.js  source.js  sources.js  spinnerBox.js  taskListsModel.js  utils.js
src/lib/: gd-gtasks-service.c  gd-gtasks-service.h  gd-task-list-renderer.c  gd-task-list-renderer.h  gd-task-lists-icon-view.c  gd-task-lists-icon-view.h  gd-utils.c  gd-utils.h
